gcc/ChangeLog: PR debug/30189 * dwarf2out.c (modified_type_die): Follow DECL_ORIGINAL_TYPE even if cv-qualification is the same. gcc/testsuite/ChangeLog: PR debug/30189 * gcc.dg/pr30189.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@121638 138bc75d-0d04-0410-961f-82ee72b054a4